# bio-Turing-Way

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  LandingPage.py  README.md  badge.py  card.py  card_text.py  landing.py  landing_page.py  main.py  mock_main.py  netlify.toml  package-lock-netlify-cli.json  pylintrc
.github/workflows/: tests.yml
dsg/: _config.yml  _toc.yml  welcome.md
dsg/_build/.doctrees/: environment.pickle  welcome.doctree
dsg/_build/.doctrees/collaboration/: leadership.doctree  (+7 more)
dsg/_build/html/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js  welcome.html
enrichment/: _config.yml  _toc.yml
master/: _config.yml  _redirects  _toc.yml  _tocOLD.yml  index.md  profiles.yml  requirements.txt  welcome.md  welcomeTest.md
master/_static/: script.js  text-to-speech.js
mynewbook/: _config.yml  _toc.yml  profiles.yml  requirements.txt
mynewbook/some/: thing.md
mynewbook/subfolder/: mymarkdownfile.md
pathways/: .coveragerc  README.md  documentation.md  pylintrc  pyproject.toml  run_tests.sh
pathways/documentation/: userguide.md
pathways/images/: README.md
pathways/pathways/: __init__.py  badge.py  card.py  landing_page.py  main.py
pathways/tests/: test_badge.py  test_card.py  test_landing.py  test_main.py
pathways/tests/test_files/test_landing/: actual_landing.md  expected_landing.md  toc_whitelist.json  welcome.md
pathways/tests/test_files/test_one/: dsg_toc.yml  phd_toc.yml
tests/: test_badge.py  test_card.py  test_landing.py  test_main.py
tests/test_files/test_one/: _toc.yml  profiles.yml
(+143 files in other folders)
